# libais-jules

./: .gitignore  .pre-commit-config.yaml  AGENTS.md  CMakeLists.txt  Changelog.md  README.rst  patch.diff  pyproject.toml  setup.py
.github/workflows/: ci.yml
ais/: __init__.py  io.py  lut.py  nmea.py  nmea_messages.py  nmea_queue.py  stats.py  tag_block.py  uscg.py  util.py  vdm.py
ais/stream/: __init__.py  checksum.py
docs/: mid.py
src/libais/: CMakeLists.txt  ais_decode_normed.cpp  vdm.cpp
test/: conftest.py  io_test.py  nmea_messages_test.py  nmea_queue_test.py  nmea_test.py  tag_block_test.py  test_data.py  test_decode.py  testutils.py  uscg_test.py  util_test.py  vdm_test.py
test/data/: test.aivdm
test/stream/: checksum_test.py
utils/: benthos_validate.py  collecttypes.py  maritime_id_codes.py
