[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "libais"
dynamic = ["version", "readme"]
description = "Automatic Identification System decoding - ship tracking"
authors = [
    { name = "Kurt Schwehr", email = "schwehr@gmail.com" }
]
license = { text = "Apache-2.0" }
classifiers = [
    "License :: OSI Approved :: Apache Software License",
    "Development Status :: 4 - Beta",
    "Intended Audience :: Science/Research",
    "Operating System :: Android",
    "Operating System :: iOS",
    "Operating System :: POSIX",
    "Programming Language :: C++",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: Implementation :: CPython",
    "Topic :: Communications",
    "Topic :: Scientific/Engineering :: Information Analysis",
    "Topic :: System :: Networking",
    "Topic :: Scientific/Engineering :: GIS",
    "Topic :: Scientific/Engineering :: Interface Engine/Protocol Translator",
]

[project.urls]
Homepage = "https://github.com/schwehr/libais"

[project.optional-dependencies]
tests = [
    "pytest",
    "pytest-cov",
    "pytest-runner",
]

[project.scripts]
libais_stats = "ais.stats:main"

[tool.setuptools.dynamic]
version = {attr = "ais.__version__"}
readme = {file = ["README.rst"]}

[tool.setuptools]
script-files = ["bin/aisdecode"]
platforms = ["POSIX"]

[tool.setuptools.packages.find]
exclude = ["test", "test.*"]
